--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My awesome mockup</title>
+    <link rel="stylesheet" href="./css/pages/home.css">
 </head>
 <body>
     Hello!!!
+    <script src="./js/build.js"></script>
 </body>
 </html>
