--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
 </head>
 <body>
     <section class="hero bg-black">
-        <header class="wrap">
-            <div class="logo pull-left">
+        <header class="wrap cf">
+            <div class="logo pull-left mt-4">
                 <img src="img/logo.png" alt="logo">
             </div>
-            <nav class="menu-block pull-right">
+            <div class="hamburger pull-right _hamburger">
+                <i class="fa fa-bars" aria-hidden="true"></i>
+            </div>
+            <nav class="menu-block _nav pull-right mt-4">
                 <ul class="main-nav">
-                    <li class="nav-item"><a class="">Home</a></li>
+                    <li class="nav-item"><a>Home</a></li>
                     <li class="nav-item"><a>Services</a></li>
                     <li class="nav-item"><a>Clients</a></li>
                     <li class="nav-item"><a>Team</a></li>
@@ -29,6 +32,21 @@
                 </ul>
             </nav>   
         </header>
+        <div class="content wrap text-center">
+            <p class="sub-heading h3 mt-10">Can you build the website of my dreams?</p>
+            <p class="main-heading h1 mt-25">YUP, WE CAN DO THAT.</p>
+            <button type="button" class="btn-prime mt-4 mb-10" data-toggle="collapse" 
+                data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">Learn more</button>
+                <div class="collapse" id="collapseExample">
+                    <div class="well">
+                        <h4><b>A little about our company:</b></h4> Lorem ipsum dolor sit, amet consectetur 
+                        adipisicing elit. Inventore expedita quibusdam molestias voluptates atque facere est 
+                        corrupti. Nostrum fugiat aspernatur officia ad saepe ea? Ad excepturi itaque pariatur 
+                        numquam molestiae!
+                    </div>
+              </div>
+        </div>
+
     </section>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
