add dropdown menu for links

--- a/index.html
+++ b/index.html
@@ -24,11 +24,43 @@
             </div>
             <nav class="menu-block _nav pull-right mt-4">
                 <ul class="main-nav">
-                    <li class="nav-item"><a>Home</a></li>
-                    <li class="nav-item"><a>Services</a></li>
-                    <li class="nav-item"><a>Clients</a></li>
-                    <li class="nav-item"><a>Team</a></li>
-                    <li class="nav-item"><a>Contact</a></li>
+                    <li class="nav-item dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Home</a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="#">Home1</a></li>
+                            <li><a href="#">Home2</a></li>
+                            <li><a href="#">Home3</a></li>                        
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Services</a>
+                        <span class="caret"></span>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="#">Services1</a></li>
+                            <li><a href="#">Services2</a></li>
+                            <li><a href="#">Services3</a></li>                        
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Clients</a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="#">Clients1</a></li>
+                            <li><a href="#">Clients2</a></li>
+                            <li><a href="#">Clients3</a></li>                        
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Team</a>
+                        <span class="caret"></span>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="#">Team1</a></li>
+                            <li><a href="#">Team2</a></li>
+                            <li><a href="#">Team3</a></li>                        
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Contact</a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="#">Contact1</a></li>
+                            <li><a href="#">Contact2</a></li>
+                            <li><a href="#">Contact3</a></li>                        
+                        </ul>
+                    </li>
                 </ul>
             </nav>   
         </header>
@@ -37,14 +69,14 @@
             <p class="main-heading h1 mt-25">YUP, WE CAN DO THAT.</p>
             <button type="button" class="btn-prime mt-4 mb-10" data-toggle="collapse" 
                 data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">Learn more</button>
-                <div class="collapse" id="collapseExample">
-                    <div class="well">
-                        <h4><b>A little about our company:</b></h4> Lorem ipsum dolor sit, amet consectetur 
+            <div class="collapse" id="collapseExample">
+                <div class="well">
+                    <h4><b>A little about our company:</b></h4> Lorem ipsum dolor sit, amet consectetur 
                         adipisicing elit. Inventore expedita quibusdam molestias voluptates atque facere est 
                         corrupti. Nostrum fugiat aspernatur officia ad saepe ea? Ad excepturi itaque pariatur 
                         numquam molestiae!
-                    </div>
-              </div>
+                </div>
+            </div>
         </div>
 
     </section>
