add ajax for sections basic and branding

--- a/index.html
+++ b/index.html
@@ -86,9 +86,10 @@
             <div class="row">
                 <div class="col-sm-8 col-xs-12">
                     <p class="h1 web-caption mt-10 mb-3">Web <strong>Development</strong></p>
-                    <p class="text-development1 mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, sint! 
+                    <p class="text-development1 mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, sint! 
                         Ducimus ipsum adipisci soluta quaerat voluptatibus culpa illum aut magni sapiente magnam, totam 
-                        inventore amet voluptate accusantium distinctio architecto eaque.</p>
+                        inventore amet voluptate accusantium <a class="link-ajax h4">distinctio architecto eaque.</a></p>
+                    <p class="ajax-text"></p>    
                     <p class="text-development2 mb-10">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates, 
                         unde! Dolorem saepe illo dolores necessitatibus veritatis repellat dignissimos, deserunt nostrum, 
                         consequatur mollitia reprehenderit atque laborum ex facilis? Doloremque, maiores sint.</p>
@@ -112,9 +113,10 @@
                 </div>
                 <div class="col-sm-8 col-xs-12">
                     <p class="h1 branding-caption mt-10 mb-3">Identity <strong>Branding</strong></p>
-                    <p class="text-branding1 mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, sint! 
+                    <p class="text-branding1 mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, sint! 
                         Ducimus ipsum adipisci soluta quaerat voluptatibus culpa illum aut magni sapiente magnam, totam 
-                        inventore amet voluptate accusantium distinctio architecto eaque.</p>
+                        inventore amet voluptate accusantium distinctio <a class="link-ajax h4">architecto eaque.</a></p>
+                    <p class="ajax-text"></p>   
                     <p class="text-branding2 mb-10">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates, 
                         unde! Dolorem saepe illo dolores necessitatibus veritatis repellat dignissimos, deserunt nostrum, 
                         consequatur mollitia reprehenderit atque laborum ex facilis? Doloremque, maiores sint.</p>
