create section footer

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
 </head>
 <body>
-    <section class="section hero bg-black">
+    <section id="hero1" class="section hero bg-black">
         <header class="wrap cf">
             <div class="logo pull-left mt-4">
                 <img src="img/logo.png" alt="logo">
@@ -236,6 +236,21 @@
                     <i class="fa fa-3x fa-angle-right"></i>
                     <span class="sr-only">Next</span>
                 </a>
+            </div>
+        </div>
+    </section>
+
+    <section class="section section-footer bg-white text-center">
+        <div class="wrap">
+            <div class="h5 mt-10 mb-4">
+                &#169; Copyright2017 Roman's Website. All rights reserved.
+            </div>
+            <div class="icons mt-5 mb-10">
+                <a href="https://github.com/" target="_blanck"><i class="fa fa-2x fa-github-square"></i></a>
+                <a href="https://www.facebook.com/" target="_blanck"><i class="fa fa-2x fa-facebook-square"></i></a>
+                <a href="mailto:maroni101010@gmail.com" target="_blanck"><i class="fa fa-2x fa-envelope-square"></i></a>
+                <a href="#hero1"><i class="fa fa-2x fa-home"></i></a>
+                <a href="https://www.google.com.ua" target="_blanck"><i class="fa fa-2x fa-google"></i></a>
             </div>
         </div>
     </section>
