--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-4">
-                            <div class="img-skills circle rel"></div>
+                        <div class="col-sm-4 rel">
+                            <div class="img-skills circle"></div>
                             <img class="img-animations abs" src="img/animations-icon1.png" alt="icon">    
                         </div>
                         <div class="col-sm-8">
